--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.37.1",
     "cross-env": "^7.0.3",
     "html-webpack-plugin": "^5.6.0",
+    "source-map-loader": "^5.0.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
